# iit_p_manipulator

./: README.md
igus_rebel/: CMakeLists.txt  joystic_servo_component.xml  package.xml
igus_rebel/include/igus_rebel/: Rebel.hpp
igus_rebel/launch/: igus_arm_bringup.launch.py
igus_rebel/src/: CriMessages.cpp  Rebel.cpp  joystic_servo.cpp  joystick_input.cpp  keyboard_input.cpp
igus_rebel_description/: package.xml
igus_rebel_description/meshes/: finger_right.stl  gripper_base.stl
igus_rebel_description/urdf/: igus_rebel2.control.xacro  igus_rebel2.urdf
igus_rebel_moveit_config/: package.xml
igus_rebel_moveit_config/config/: igus_rebel2.srdf  moveit_controllers.yaml  ompl_planning.yaml  servo_config.yaml
igus_rebel_moveit_config/launch/: gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  servo.launch.py  test.launch.py
igus_rebel_msgs/: package.xml
manipulator_firmware/: platformio.ini
manipulator_firmware/include/: StepperModule.h  configuration.h
manipulator_firmware/src/: StepperModule.cpp  delete_all_nvs_data.txt  main.cpp  test.txt
panda_description/: package.xml
panda_description/urdf/: panda.urdf.xacro
panda_moveit_config/: .setup_assistant  package.xml
panda_moveit_config/config/: initial_positions.yaml  panda.srdf  panda.urdf.xacro
