<?xml version="1.0"?>
<package format="3">
  <name>panda_description</name>
  <version>3.1.0</version>
  <description>panda Resources used for MoveIt testing</description>

  <maintainer email="gupta.adyansh@gmail.com">Adyansh Gupta</maintainer>

  <license>BSD</license>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
